# dans-license-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
resources/licences/: licence_MA_ID.json  licence_MA_ID_VU.json  licence_MA_ID_VU_CE.json  licences-list.json
src/: main.py
src/conf/: settings.toml
tests/: test_dans_license_service.py
