[tool.poetry]
name = "dans-license-service"
version = "0.1.0"
description = "DANS License Service"
authors = ["eko indarto <eko.indarto@dans.knaw.nl>"]

packages = [
    { include = "src" }
]


[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
fastapi = "^0.85.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
